# base-data-science

./: .gitignore  LICENSE  Makefile  README.md  app.py  app.yaml  main.py  pyproject.toml  requirements.txt
base_data_science/: __init__.py  dataset.py  features.py  plots.py
base_data_science/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
src/: __init__.py  dataset.py  features.py  plots.py
src/modeling/: predict.py  train.py
